...G...... [ZBX-7412] fixed alias parsing; colon symbols are now supported in alias parameters (Juris)
........S. [ZBX-7204] fixed timestamp order of events generated during network discovery (igors)

--------------------------------------------------------------------------------
Changes for 2.2.2rc3

Bug fixes:
.......PS. [ZBX-7698] fixed closing a connection to the database when database server is unavailable (Sasha)
........S. [ZBX-7758] fixed server crash when processing low-level discovery triggers prototypes (Sasha)

--------------------------------------------------------------------------------
Changes for 2.2.2rc2

Bug fixes:
..F....... [ZBX-6296] fixed macros in item names not being resolved in simple graph titles (Eduard)
..F....... [ZBX-7743] fixed not being able to save the user or profile form if PHP gettext is unavailable (Eduard)
A......... [ZBX-7693] fixed user media validation (Eduard)
A......... [ZBX-7693] fixed admin user being able to update media for other users (Eduard)
........S. [ZBX-7711] fixed memory leak in vmware collector (wiper)

--------------------------------------------------------------------------------
Changes for 2.2.2rc1

New features:
.......PS. [ZBX-7649] synchronize ICMP checks based on item interface. This should reduce the number of fping invocations in most cases (wiper)
..F.....S. [ZBXNEXT-2069] added HOST.PORT macro support to internal/trigger based notifications and also to trigger names/descriptions (wiper, Oleg)
A.F....... [ZBX-1357] updated American English, Czech, French, Greek, Hungarian, Italian, Japanese, Russian, Slovak, Turkish and Ukrainian translations; thanks to Zabbix translators (Richlv)

Bug fixes:
..F....... [ZBX-7600] updated .htaccess files to be compatible with Apache 2.4 (Richlv)
..F....... [ZBX-7684] improved displaying of script execution page (Eduard)
...G...... [ZBX-7668] fixed sending empty values when reading from a file with zabbix_sender (Juris)